# plant-disease-detection

./: .gitignore  Dockerfile  README.md  main.py  notebook.ipynb  predict.py  pyproject.toml  train.py
k8s/: deployment.yaml  service.yaml
